# cnn-partitioned-init

./: .gitignore  LICENSE  README.md  pyproject.toml  sample.ipynb
docker-example/: Dockerfile  README.md  common.py  docker-compose.yml  merge_and_finetune.py  train_split.py
