[project]
name = "nn-distributed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "tensorflow-datasets>=4.9.9",
    "tensorflow[and-cuda]>=2.20.0",
]
